@@ -1,4 +1,6 @@
 version 0.7.1 not released:
+
+added: Clove compiles with C++ for more future features
 added: *.clove.tar, see examples folder -> package.
 added: love.filesystem.require("file.lua"). Acts like require even in packaging mode
 
